/*
 * $Id: ChangeLog,v 1.443 2002/10/15 19:09:45 mlombardo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-15 12:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/version.c
    * Renamed HB_PCODE() to HB_PCODEVER()
    + Added missing extern declaration.

  * source/vm/hvm.c
  * source/vm/memvars.c
    - Removed unused variables assignments.

2002-10-15 15:00 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/vm/hvm.c
    ! Fixed eternal loop when error 1003 is issued and errorsys creates
      the undefined sysmbol and returns ES_RETRY
  * source/vm/memvars.c
    ! __MVPUT : fixed symbol name trailing spaces problem
    ! __MVSCOPE : fixed symbol name trailing spaces problem
    ! hb_memvarFindSymbol() : speed improved and fixed symbol name trailing
                              spaces problem
    ! hb_memvarScope() : speed improved, fixed symbol name trailing
                         spaces problem and removed the second parameter
  * source/vm/macro.c
    ! hb_compMemvarCheck() - hb_memvarScope call parameter adjusted
  * include/hbapi.h
    ! hb_memvarScope prototype - parameter adjusted

2002-10-15 02:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! fixed get (value and display) involving negative with decimal
      number whose value is less than 1, in some pictures.

2002-10-15 10:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbapi.h
     + add function prototype: extern char * hb_verPCode( void )
   * source/rtl/version.c
     + add Harbour surface function: HB_PCODE() => Return pCode version info
   * source/common/hbver.c
     + add PCode Version information when user issue -build switch.

2002-10-14 18:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    * Corrected default scope to nScope.
